--- a/css/search_bar.css
+++ b/css/search_bar.css
@@ -35,6 +35,12 @@
 	margin: 0;
 }
 
+.search-bt:active
+{
+	filter: brightness(80%);
+	box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 1);
+}
+
 .filter-options
 {
 	box-shadow: 0px 1px 10px var(--shadow-color);
